add README file and .env